2003-09-15  Not Zed  <NotZed@Ximian.com>

	* libgnomeui/gnome-icon-list.c (real_select_icon): Only add the
	icon to the selection if it isn't already in the selected list.
	Fixes bug #122356.

2003-09-09  Anders Carlsson  <andersca@gnome.org>

	* configure.in: Release 2.4.0.1

2003-09-01  Anders Carlsson  <andersca@gnome.org>

	* configure.in: Release 2.4.0

2003-08-25  Anders Carlsson  <andersca@gnome.org>

	* configure.in: Release 2.3.7

2003-09-05  Taneem Ahmed  <taneem@bengalinux.org>

	* configure.in: Added "bn" to ALL_LINGUAS.

2003-09-01  Laurent Dhima  <laurenti@alblinux.net>

	* configure.in: Added "sq" to ALL_LINGUAS.
	
2003-08-11  Anders Carlsson  <andersca@codefactory.se>

	* configure.in: Release 2.3.6

2003-07-04  Anders Carlsson  <andersca@codefactory.se>

	* configure.in: Release 2.3.3.1

Fri Jul  4 04:27:42 2003  Soeren Sandmann  <sandmann@daimi.au.dk>

	* libgnomeui/gnome-app.c (gnome_app_add_toolbar): remove setting
	of border width, thus getting rid of double bevels.

2003-07-03  Anders Carlsson  <andersca@codefactory.se>

	* doc/reference/.cvsignore:
	* doc/reference/Makefile.am:
	* doc/reference/libgnomeui-docs.sgml:
	Generate xml reference docs (#111798, Matthias Clasen)

2003-07-01  Kjartan Maraas  <kmaraas@gnome.org>

	* libgnomeui/gnome-thumbnail-pixbuf-utils.c (vfs_src): Merge
	fix for bug #114928
	* libgnomeui/gnome-ui-init.c: Merge fix for bug #111496.

2003-06-25  Thomas Vander Stichele <thomas at apestaart dot org>

        * po/az.po: removed \- which was causing msgfmt to break

2003-06-15  Anders Carlsson  <andersca@codefactory.se>

	* libgnomeui/gnome-icon-theme.c: (load_themes),
	(string_from_suffix), (suffix_from_name), (scan_directory):
	Treat files ending with ".svgz" as svg files. 
	
2003-06-05  Alexander Larsson  <alexl@redhat.com>

	* libgnomeui/gnome-thumbnail.c (gnome_thumbnail_factory_ensure_failed_uptodate):
	Avoid using uninitialized value tv.tv_sec

Wed Jun 04 15:54:18 2003  George Lebl <jirka@5z.com>
